--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,13 +42,13 @@ input[type=submit], button { padding: .75em !important; height: auto !important;
 **  MODAL WINDOWS
 ***************************************************/
 .modal-overlay { position: fixed; top: 0; right: 0; bottom: 0; left: 0; opacity: 0; z-index: -100; background-color: rgba(0,0,0,.8); -webkit-transform: scale(.3); -ms-transform: scale(.3); transform: scale(.3); transition: all .75s cubic-bezier(.68,-.55,.265,1.55); }
-.modal-content { position: relative; text-align: left; padding: 2em; overflow-y: scroll; max-height: 600px; }
+.modal-content, .modal-stuff { position: relative; text-align: left; padding: 2em; overflow-y: scroll; max-height: 600px; }
 label.modal-label {  }
 label.modal-button {  }
 label.modal-close { position: absolute; top: 30px; right: 30px; height: 35px; width: 35px; line-height: 35px; text-align: center; color: white; font-size: 24px; font-weight: bold; cursor: pointer; background-color: black; -webkit-border-radius: 100%; -moz-border-radius: 100%; border-radius: 100%; }
 input.modal-toggle { position: absolute; left: -10000px; opacity: 0; }
 input.modal-toggle:checked ~ .modal-overlay { opacity: 1; transform: scale(1); z-index: 2000; }
-.vertical { position: absolute; top: 50%; left: 0; width: 100%; text-align: center; -webkit-transform: translateY(-50%); -moz-transform: translateY(-50%); -ms-transform: translateY(-50%); -o-transform: translateY(-50%); transform: translateY(-50%); }
+.vertical { position: absolute; top: 50%; left: 0; width: 100%; text-align: center; opacity: inherit; -webkit-transform: translateY(-50%); -moz-transform: translateY(-50%); -ms-transform: translateY(-50%); -o-transform: translateY(-50%); transform: translateY(-50%); }
 
 
 /***************************************************
@@ -145,6 +145,7 @@ footer { clear: both; background-color: black; }
 /*  HANDHELD PHONES (XS) */
 @media only screen and (min-width: 300px) {
 	#logo { display: none; }
+	.modal-content { max-height: 600px; }
 }
 
 @media only screen and (min-width: 321px) {
@@ -166,15 +167,16 @@ footer { clear: both; background-color: black; }
 	.menu-page { -webkit-border-radius: 0 0 0 5em; -moz-border-radius: 0 0 0 5em; border-radius: 0 0 0 5em; }
 	.menu-page li:first-child { display: inline-block; width: 50px; }
 	.menu-page a:hover, .menu-page .menu-active { transition: all 1s ease; color: #1b84c2 !important; background-color: rgba(25,130,190,.3); border-bottom-color: #1b84c2 !important; }
-	.register-now { color: white !important; background-color: red; }
+	.register-now { color: white !important; background-color: #1b84c2; }
 }
 
 /*  LAPTOPS  (MD) */
 @media only screen and (min-width: 992px) {
 	.jumbotron h1 { font-size: 75pt; }
+	.modal-content { max-height: 800px; }
 }
 
 /*  DESKTOPS  (LG)  */
 @media only screen and (min-width: 1200px) {
-
+	.modal-content { max-height: 1000px; }
 }
